## Copyright (C) 2017-2018 Red Hat.

## You should have received a copy of the GNU General Public License
## along with this program; see the file COPYING3.  If not see
## <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in.

info_TEXINFOS = annobin.texi
annobin_TEXINFOS = fdl.texi

# Not set up for building a man-page yet...
# man_MANS = annobin.1

dist_doc_DATA = annotation.proposal.txt

