## Copyright (C) 2017-2018 Red Hat

## You should have received a copy of the GNU General Public License
## along with this program; see the file COPYING3.  If not see
## <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in.

TESTS=compile-test hardening-test hardening-fail-test abi-test missing-notes-test
XFAIL_TESTS=hardening-fail-test

